Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42188

Android menu at action overflow button does not always open at first press

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.5.0 Beta
    • 5.4.0 Beta, 5.4.0 RC, 5.4.0
    • Quick: Controls 1
    • None
    • Linux 64-bit
    • Android

    Description

      Since Qt 5.4-beta, an Android application using QtQuick.Controls with a menu shows an action bar with an overflow button. However, sometimes the overflow button opens the menu only after having been pressed twice.

      I can reproduce this bug with the attached QML file that creates an ApplicationWindow with two menus and one menu item. At the first press of the overflow button, the menu opens immediately. If Item1 is selected, the menu closes. After that, the menu only opens again after two presses of the overflow button.

      I used the attached QML file in a default QtQuick project created by QtCreator that comes with Qt 5.4-beta/Android with minSdkVersion=9 and targetSdkVersion=14. I verified that the bug occurs both on a smartphone with Android 4.2.2 and on a virtual device with Android 4.4.2. It also occurs in a larger project of mine, which uses minSdkVersion=9 and targetSdkVersion=10.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            michal Michal Klocek
            enz Markus Enzenberger
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes